--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <body>
     <!-- Header  -->
     <header>
-      <a href="#" class="logo"><img src="image/logo.png" alt="logo" /></a>
+      <a href="#home" class="logo"><img src="image/logo.png" alt="logo" /></a>
 
       <!-- Nav list  -->
       <ul class="navlist">
         <li><a href="#home">Home</a></li>
         <li><a href="#specs">Specs</a></li>
         <li><a href="#shop">Shop</a></li>
-        <li><a href="#testimonal">Testimonal</a></li>
+        <li><a href="#testimonial">Testimonial</a></li>
         <li><a href="#contact">Contact Us</a></li>
       </ul>
 
@@ -44,8 +44,8 @@
           alias exercitationem quasi et accusamus enim temporibus ex. Deserunt,
           eveniet earum.
         </p>
-        <a href="#" class="btn">SHOP NOW</a>
-        <a href="#" class="btn2"
+        <a href="#shop" class="btn">SHOP NOW</a>
+        <a href="#specs" class="btn2"
           >REVIEW PRODUCT <i class="bx bxs-down-arrow"></i
         ></a>
       </div>
@@ -55,7 +55,7 @@
       </div>
     </section>
 
-    <!-- Texhnology sectiion  -->
+    <!-- Technology sectiion  -->
     <section class="wrapper">
       <div class="wrapper-box">
         <h1>TECHNOLOGY</h1>
@@ -72,6 +72,273 @@
         <p>Apple H1 headphone chip</p>
       </div>
     </section>
+
+    <!-- Specs  section -->
+    <section class="specs" id="specs">
+      <div class="spec-text">
+        <h4>Audio quality</h4>
+        <h2>Sounds Like an epiphany</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et,
+          obcaecati dignissimos eum officiis quas, fugiat soluta eaque atque
+          veniam libero pariatur dolore quaerat ipsum mollitia tempore? Beatae
+          tempora ullam numquam.<br /><br />Lorem ipsum dolor, sit amet
+          consectetur adipisicing elit. Ipsa illum id, modi corporis aspernatur
+          unde iste nam a officiis culpa provident placeat voluptatibus facilis
+          debitis, dolorum vel laudantium dolores autem.
+        </p>
+        <a href="#" class="btn"> FIND A STORE</a>
+      </div>
+
+      <div class="specs-img">
+        <img src="image/Audio.png" alt="headphone image" />
+      </div>
+
+      <div class="specs-img">
+        <img src="image/Case.png" alt="headphone image" />
+      </div>
+
+      <div class="spec-text">
+        <h4>Audio quality</h4>
+        <h2>Sounds Like an epiphany</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et,
+          obcaecati dignissimos eum officiis quas, fugiat soluta eaque atque
+          veniam libero pariatur dolore quaerat ipsum mollitia tempore? Beatae
+          tempora ullam numquam.<br /><br />Lorem ipsum dolor, sit amet
+          consectetur adipisicing elit. Ipsa illum id, modi corporis aspernatur
+          unde iste nam a officiis culpa provident placeat voluptatibus facilis
+          debitis, dolorum vel laudantium dolores autem.
+        </p>
+        <a href="#" class="btn"> FIND A STORE</a>
+      </div>
+
+      <div class="spec-text">
+        <h4>Audio quality</h4>
+        <h2>Sounds Like an epiphany</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et,
+          obcaecati dignissimos eum officiis quas, fugiat soluta eaque atque
+          veniam libero pariatur dolore quaerat ipsum mollitia tempore? Beatae
+          tempora ullam numquam.<br /><br />Lorem ipsum dolor, sit amet
+          consectetur adipisicing elit. Ipsa illum id, modi corporis aspernatur
+          unde iste nam a officiis culpa provident placeat voluptatibus facilis
+          debitis, dolorum vel laudantium dolores autem.
+        </p>
+        <a href="#" class="btn"> FIND A STORE</a>
+      </div>
+
+      <div class="specs-img">
+        <img src="image/Battery.png" alt="headphone image" />
+      </div>
+    </section>
+
+    <!-- Shop section  -->
+    <section class="shop" id="shop">
+      <div class="sub-title">
+        <h4>SHOP</h4>
+        <h2>Four Colors. Anything but monotone</h2>
+      </div>
+
+      <div class="shop-content">
+        <div class="item-row">
+          <img src="image/Pink.png" alt="headphone color" />
+          <h3>Max - Pink</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <div class="text-info">
+            <div class="price">
+              <h6>$100.00</h6>
+            </div>
+            <div class="small-btn">
+              <a href="#">FIND A STORE</a>
+            </div>
+          </div>
+
+          <div class="upper-icon">
+            <a href="#"><i class="bx bxl-apple"></i></a>
+          </div>
+        </div>
+
+        <div class="item-row">
+          <img src="image/Blue.png" alt="headphone color" />
+          <h3>Max - Blue</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <div class="text-info">
+            <div class="price">
+              <h6>$100.00</h6>
+            </div>
+            <div class="small-btn">
+              <a href="#">FIND A STORE</a>
+            </div>
+          </div>
+
+          <div class="upper-icon">
+            <a href="#"><i class="bx bxl-apple"></i></a>
+          </div>
+        </div>
+
+        <div class="item-row">
+          <img src="image/Gray.png" alt="headphone color" />
+          <h3>Max - Gray</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <div class="text-info">
+            <div class="price">
+              <h6>$100.00</h6>
+            </div>
+            <div class="small-btn">
+              <a href="#">FIND A STORE</a>
+            </div>
+          </div>
+
+          <div class="upper-icon">
+            <a href="#"><i class="bx bxl-apple"></i></a>
+          </div>
+        </div>
+
+        <div class="item-row">
+          <img src="image/Green.png" alt="headphone color" />
+          <h3>Max - Green</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <div class="text-info">
+            <div class="price">
+              <h6>$100.00</h6>
+            </div>
+            <div class="small-btn">
+              <a href="#">FIND A STORE</a>
+            </div>
+          </div>
+
+          <div class="upper-icon">
+            <a href="#"><i class="bx bxl-apple"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Testimonal Section  -->
+    <section class="testimonial" id="testimonial">
+      <div class="sub-title">
+        <h4>Client Testimonials</h4>
+        <h2>Insights from our clients</h2>
+      </div>
+
+      <div class="testimonial-content">
+        <div class="box">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <div class="in-box">
+            <div class="img-box">
+              <img src="image/Client1.png" alt="client image" />
+            </div>
+            <div class="box-text">
+              <h4>Jasmin Sinclair</h4>
+              <h5>Photographer</h5>
+              <div class="ratings">
+                <a href="#"><i class="bx bxs-star"></i></a>
+                <a href="#"><i class="bx bxs-star"></i></a>
+                <a href="#"><i class="bx bxs-star"></i></a>
+                <a href="#"><i class="bx bxs-star"></i></a>
+                <a href="#"><i class="bx bxs-star-half"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="box">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <div class="in-box">
+            <div class="img-box">
+              <img src="image/Client2.png" alt="client image" />
+            </div>
+            <div class="box-text">
+              <h4>Maglin Xavior</h4>
+              <h5>Video Editor</h5>
+              <div class="ratings">
+                <a href="#"><i class="bx bxs-star"></i></a>
+                <a href="#"><i class="bx bxs-star"></i></a>
+                <a href="#"><i class="bx bxs-star"></i></a>
+                <a href="#"><i class="bx bxs-star"></i></a>
+                <a href="#"><i class="bx bxs-star-half"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="box">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <div class="in-box">
+            <div class="img-box">
+              <img src="image/Client3.png" alt="client image" />
+            </div>
+            <div class="box-text">
+              <h4>Adam Ibraheem</h4>
+              <h5>Audio Engineer</h5>
+              <div class="ratings">
+                <a href="#"><i class="bx bxs-star"></i></a>
+                <a href="#"><i class="bx bxs-star"></i></a>
+                <a href="#"><i class="bx bxs-star"></i></a>
+                <a href="#"><i class="bx bxs-star"></i></a>
+                <a href="#"><i class="bx bxs-star-half"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer and contact  -->
+    <section class="contact" id="contact">
+      <div class="contact-text">
+        <h4>CONTACT</h4>
+        <h2>Get In Touch</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure sed,
+          sit eaque cum doloremque optio commodi vel deleniti! Eos, iusto!
+          Ullam, laborum laudantium repellendus hic deleniti harum adipisci
+          expedita similique consequatur ipsa neque corporis autem! Adipisci a
+          omnis molestiae, tenetur delectus possimus asperiores unde laudantium
+          ratione maiores dolorum commodi, vel eum atque exercitationem enim
+          debitis aliquam totam similique voluptatum amet!
+        </p>
+
+        <div class="social-icons">
+          <a href="#"><i class="bx bxl-twitter"></i></a>
+          <a href="#"><i class="bx bxl-facebook"></i></a>
+          <a href="#"><i class="bx bxl-instagram"></i></a>
+        </div>
+      </div>
+
+      <div class="contact-form">
+        <form action="#">
+          <input
+            type="text"
+            name="name"
+            placeholder="Your Full Name"
+            required
+          />
+          <input
+            type="email"
+            name="Email"
+            placeholder="mail@gmail.com"
+            required
+          />
+          <textarea
+            name="Message"
+            cols="33"
+            item-rows="6"
+            placeholder="Please Enter Your Message"
+          ></textarea>
+          <button type="button" class="btn">Send message</button>
+        </form>
+      </div>
+    </section>
+
+    <!-- footer  -->
+    <footer class="footer">
+      <small
+        >Copyright &#169; <i class="bx bxl-apple"></i> 2024 Inc. All rights
+        reserverd</small
+      >
+    </footer>
     <script src="/script.js"></script>
   </body>
 </html>
